<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="jamespollitt.rocketquiz.GameActivity">

    <LinearLayout
        android:id="@+id/gamePlanetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bluePlanetImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:contentDescription="@string/game_bplanet_desc"
            app:srcCompat="@drawable/blue_planet" />

        <ImageView
            android:id="@+id/orangePlanetImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/game_oplanet_desc"
            app:srcCompat="@drawable/orange_planet" />

        <ImageView
            android:id="@+id/redPlanetImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:contentDescription="@string/game_rplanet_desc"
            app:srcCompat="@drawable/red_planet" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameAnswersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/answerOneText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="78dp"
            android:text="@string/game_answer1_default"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answerTwoText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="78dp"
            android:text="@string/game_answer2_default"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answerThreeText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="78dp"
            android:text="@string/game_answer3_default"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/gameQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/game_question_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/gameRocketImage"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/rocket" />

    <Button
        android:id="@+id/changeQbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="Change" />

</RelativeLayout>
