<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="jamespollitt.rocketquiz.GameEndActivity">


    <LinearLayout
        android:id="@+id/gameEndTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gameEndTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/gameend_gameover_text"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gameEndScoredText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/gameend_scored_text"
            android:textColor="#fff"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/gameEndQuoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameEndButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gameEndTextLayout"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gameEndContBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/gameEndAdView"
            android:layout_alignStart="@+id/gameEndAdView"
            android:layout_marginBottom="167dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/gameend_continue_button"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/gameEndShareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3B5998"
            android:text="@string/gameend_share_button"
            android:textColor="#ffffff" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/gameEndAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3356582602697138/8055955476" />
</RelativeLayout>
