<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="jamespollitt.rocketquiz.AccountActivity">

    <RelativeLayout
        android:id="@+id/accountHeader"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/accountProfilePic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:src="@drawable/avatar_astronaut" />

        <TextView
            android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accountProfilePic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/home_username_placeholder"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/accountScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accountName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/icon_coin"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_coin"
            android:text="@string/game_default_score"
            android:textColor="#fff"
            android:textSize="18sp" />

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/accountAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3356582602697138/8055955476" />

    <Button
        android:id="@+id/accountLogoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/accountAdView"
        android:layout_gravity="bottom"
        android:onClick="accountButtonClicked"
        android:text="@string/acc_logout_button" />

    <ScrollView
        android:id="@+id/accountStats"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/accountLogoutBtn"
        android:layout_below="@+id/accountHeader"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/accWinLossBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:indeterminateTint="@color/green"
                android:progress="50"
                android:theme="@style/AccountProgressBar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/accCorrectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/acc_correct_bar" />

                <TextView
                    android:id="@+id/accPercText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="50%"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/accWrongText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/acc_wrong_bar"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
